<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_directparking" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/msg_forgot_password"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/round_shape_solid_yellow"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableEnd="@drawable/ic_email"
                    android:gravity="start|center_vertical"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingTop="0dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="13sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/btn_send"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/light_round_shape_solid_bluish_grey_selector"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/title_submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:visibility="visible" />
        </FrameLayout>

    </RelativeLayout>

</LinearLayout>
