<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_location_picker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/nav_ic_parking" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_parking_number_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColorHint="@color/medium_grey">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_parking_number_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:hint="@string/hint_parking_lot_number"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusRight="@+id/et_drop"
                    android:paddingTop="2dp"
                    android:textColorHint="@color/medium_grey"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:src="@drawable/icon_pickup_drawable" />

            <TextView
                android:id="@+id/tv_pickup_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_bottom_stroke"
                android:ellipsize="end"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/hint_pickup_location"
                android:textColor="@color/primary_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baloon_orange" />

            <TextView
                android:id="@+id/tv_drop_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_bottom_stroke"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/hint_drop_location"
                android:textColor="@color/primary_text_color" />
        </LinearLayout>


        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/til_drop_address"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:textColorHint="@color/medium_grey">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/et_drop_address"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:drawableEnd="@drawable/ic_baloon"-->
        <!--android:ellipsize="end"-->
        <!--android:gravity="start|center_vertical"-->
        <!--android:hint="@string/hint_drop_location"-->
        <!--android:imeOptions="actionDone"-->
        <!--android:inputType="text"-->
        <!--android:maxLines="1"-->
        <!--android:paddingTop="2dp"-->
        <!--android:textColorHint="@color/medium_grey"-->
        <!--android:textSize="13sp" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

    </LinearLayout>
</android.support.v7.widget.CardView>